--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+/* # variáveis CSS */
+
 :root{
     --primary--base-color: #FF6347;
     --primary--dark1-color: #E5593F;
@@ -27,6 +29,7 @@
 
     --gap: 3rem
 }
+/* # Elementos  */
 *{
     margin: 0;
     padding: 0;
@@ -35,4 +38,41 @@
 html{
     font-size: 62.5%;
     scroll-behavior: smooth;
+}
+body{
+    font-family: 'noto Sans JP', sans-serif;
+    font-size: 2rem;
+    color: var(--black-scale-base);
+    line-height: 1.5;
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: 'girassol', sans-serif;
+}
+h1{
+    font-size: 6rem;
+    text-transform: uppercase;
+}
+h2{
+    font-size: 5.5rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
+}
+h3{
+    font-size: 5rem;
+}
+h4{
+    font-size: 4.5rem;
+}
+h5{
+    font-size: 4rem;
+}
+h6{
+    font-size: 3.5rem;
+}
+a{
+    text-decoration: none;
+}
+p{
+    margin-bottom: .5rem;
 }
