--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,7 +86,7 @@ ul li{
     left: 0;
     right: 0;
     width: 100%;
-    border-bottom: 0.1rem solid var(--primary--dark1-color);
+    border-bottom: 0.2rem solid var(--primary--dark1-color);
     z-index: 1;
 }
 .menu-content{
@@ -118,21 +118,88 @@ ul li{
 .menu ul{
     display: flex;
 }
+.menu ul li{
+    align-items: center;
+    justify-content: center;
+}
 .menu ul li a{
     display: block;
-    padding: 3rem;
+    padding: .5rem;
     font-size: 3.5rem;
     color: var(--primary--dark2-color);
-    position: relative;
+    width: 35rem;
 }
 .nhac::after{
     content: 'Nhac! Nhac!';
+    font-family: 'Noto Sans JP ', sans-serif;
+    position: absolute;
+    width: 20rem;
+    height: 4rem;
     transition: all 300ms ease-in-out;
+    text-align: center;
 }
 .nhac:hover::after{
-    content: '嗦嗦!嗦嗦!';
+    content: '嗦嗦! 嗦嗦!';
     font-family: 'ma shan zheng';
-    font-size: 3.8rem;
+    font-size: 3.7rem;
+    box-shadow: 0 20px 25px -15px var(--primary--base-color);    
+}
+.salgados::after{
+    content: 'Pratos salgados';
+    font-family: 'Noto Sans JP ', sans-serif;
+    width: 30rem;
+    height: 4rem;
+    position: absolute;
+    text-align: center;
+    transition: all 300ms ease-in-out;
+}
+.salgados:hover::after{
+    content: '咸菜';
+    font-family: 'ma shan zheng';
+    font-size: 3.7rem;
+    text-align: center;
+    box-shadow: 0 20px 25px -15px var(--primary--base-color);
+
+}
+.doces::after{
+    content: 'Pratos Doces';
+    font-family: 'Noto Sans JP ', sans-serif;
+    width: 35rem;
+    height: 4rem;
+    position: absolute;
+    text-align: center;
+    transition: all 300ms ease-in-out;
+    
+}
+.doces:hover::after{
+    content: '甜菜';
+    font-family: 'ma shan zheng';
+    font-size: 3.7rem;
+    box-shadow: 0 20px 25px -15px var(--primary--base-color);
+}
+.enviar::after{
+    content: 'Enviar prato';
+    font-family: 'Noto Sans JP ', sans-serif;
+    width: 35rem;
+    height: 4rem;
+    position: absolute;
+    text-align: center;
+    transition: all 300ms ease-in-out;
+    
+}
+.enviar:hover::after{
+    content: '送菜';
+    font-family: 'ma shan zheng';
+    font-size: 3.7rem;
+    box-shadow: 0 20px 25px -15px var(--primary--base-color);
+}
+
+/* # Variáveis */
+.section{
+    min-height: 100vh;
+}
+.main{
+    background-color: var(--primary--light3-color);
 }
 
 
