--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -213,7 +213,7 @@ ul li{
     background-color: var(--primary--light3-color);
 }
 .secondary-bg{
-    background-color: var(--white-scale-2);
+    background-color: var(--white-scale-1);
 }
 
 /* # intro-main section */
@@ -306,3 +306,75 @@ ul li{
     text-align: center;
     color: var(--primary--light1-color);
 }
+
+/* # pratos salgados*/
+.salgados-sec h2{
+    color: var(--primary--dark2-color);
+    font-size: 4rem;
+    text-align: center;
+    margin-top: 1rem;
+}
+.grid-salgados{
+    display: grid;
+    gap: var(--gap);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1.4fr;
+    grid-template-areas: 
+    'card1 card2 card3 card4'
+    'card5 card5 card5 card5'
+    ;
+}
+.grid-salgados .um{
+    grid-area: card1;
+}
+.grid-salgados .dois{
+    grid-area: card2;
+}
+.grid-salgados .tres{
+    grid-area: card3;
+}
+.grid-salgados .quatro{
+    grid-area: card4;
+}
+.grid-salgados .cinco{
+    grid-area: card5;
+} 
+
+.card-prato{
+    background: var(--white-scale-base);
+}
+.card-prato .img-salgados{
+    width: 100%;
+    max-width: 26rem;
+    overflow: hidden;
+
+}
+
+.card-prato img{
+    transition: all 300ms ease-in-out;
+}
+.card-prato img:hover{
+    transform: translate(3%, 3%) scale(1.2) rotate(5deg);
+}
+
+.card-prato .descricao{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/* .cinco{
+    display: flex;
+    flex-direction: column;
+} */
+
+.card-prato .descricao p{
+    text-align: center;
+    margin: 0 2rem;
+}
+
+.salgados-sec h3{
+    color: var(--primary--dark2-color);
+    font-size: 2rem;
+    text-align: center;
+}
+
