--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -470,3 +470,98 @@ ul li{
     margin-top: -3rem;
     margin-bottom: -1rem;
 }
+
+/* @ formulário de novo prato */
+
+.descrisao-form h2{
+    color: var(--primary--dark2-color);
+    margin-bottom: 2rem;
+}
+.descrisao-form p{
+    color: var(--primary--dark2-color);
+    line-height: 3rem;
+}
+.descrisao-form .mandarim{
+    color: var(--primary--dark3-color);
+    line-height: 6rem;
+    font-size: 5rem;
+    text-align: right;
+    margin-top: 5rem;
+    margin-right: 15rem;
+    text-shadow: 0.3rem 0.3rem 0.08rem var(--primary--base-color)
+}
+.content-form{
+    grid-column: span 2;
+    margin-top: 5rem;
+}
+
+.content-form .form-grid{
+    border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.form-grid legend{
+    font-style: italic;
+    font-size: 2.6rem;
+    margin-bottom: 3rem;
+    color: var(--primary--dark2-color);
+}
+
+.form-group label{
+    margin-left: 2rem;
+    display: block;
+    color: var(--primary--dark2-color);
+}
+.form-group{
+    flex: 1 1 480px;
+}
+.form-group #time{
+    width: 20rem;
+    margin-left: 1rem;
+}
+.form-group input, 
+.form-group textarea  {
+    border: none;
+    border-radius: 2rem;
+    background: var(--primary--light2-color)    ;
+    padding: 1.5rem 2rem;
+    width: 100%;
+    font-size: 3rem;
+    outline: none;
+    
+}
+.form-group ::placeholder{
+    color: var(--primary--dark3-color);;
+}
+
+body .full-width{
+    width: 100%;
+    flex: 1 1 100%;
+}
+.full-width .align{
+    width: 20rem;
+    margin: 0    auto;
+
+}
+.form-group button{
+    margin-left: 2rem;
+    height: 8rem;
+    width: 16rem;
+    text-align: center;
+    border: 0.3rem solid var(--primary--light2-color) ;
+    border-radius: 2rem;
+    background: none;
+    color: var(--primary--dark1-color);
+    padding: 1.5rem 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+.form-group button:hover{
+    border: 0.5rem solid var(--primary--dark1-color);
+    background: var(--primary--base-color) ;
+    color: var(--primary--light2-color);
+}
