--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,9 +82,7 @@ p{
 ul li{
     list-style: none;
 }
-.menu-spacing{
-    height: 6.5rem;
-}
+
 
 /* @ menu  */
 
@@ -203,9 +201,13 @@ ul li{
     box-shadow: 0 20px 25px -15px var(--primary--base-color);
     text-align: center;
 }
-
+.sustein{
+    max-width: 100%;
+}
 /* @ Variáveis */
-
+.menu-spacing{
+    height: 6.5rem;
+}
 .section{
     min-height: 100vh;
 }
@@ -341,7 +343,7 @@ ul li{
 .grid-salgados, .grid-doces{
     display: grid;
     gap: var(--gap);
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     grid-template-rows: 1fr 1.4fr;
     grid-template-areas: 
     'card1 card2 card3 card4'
@@ -351,7 +353,7 @@ ul li{
 .grid-salgados .um, .grid-doces .um{
     grid-area: card1;
 }
-.grid-salgados .dois, .grid-doces .doies{
+.grid-salgados .dois, .grid-doces .dois{
     grid-area: card2;
 }
 .grid-salgados .tres, .grid-doces .tres{
@@ -375,7 +377,7 @@ ul li{
 }
 
 .card-prato img{
-    width: 40rem;
+    max-width: 40rem;
     transition: all 300ms ease-in-out;
 }
 .card-prato img:hover{
@@ -401,6 +403,7 @@ ul li{
     background: var(--white-scale-base);
 }
 .cinco .img-salgados, .cinco .img-doces{
+    max-width: 50rem;
     overflow: hidden;
     align-items: center;
 }
@@ -512,6 +515,7 @@ ul li{
 
 .form-group label{
     margin-left: 2rem;
+    margin-bottom: 1rem;
     display: block;
     color: var(--primary--dark2-color);
 }
@@ -532,6 +536,10 @@ ul li{
     font-size: 3rem;
     outline: none;
     
+}
+.form-group input:focus, 
+.form-group textarea:focus  {
+    box-shadow: 0 0 25px 2px var(--primary--base-color);
 }
 .form-group ::placeholder{
     color: var(--primary--dark3-color);;
@@ -561,7 +569,10 @@ body .full-width{
     transition: all 300ms ease-in-out;
 }
 .form-group button:hover{
+    font-weight: bold;
     border: 0.5rem solid var(--primary--dark1-color);
     background: var(--primary--base-color) ;
     color: var(--primary--light2-color);
+    box-shadow: 2px 2px 10px 5px var(--primary--light1-color);
 }
+
