Corrige posições do menu responsivo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -135,7 +135,7 @@ ul li{
     display: block;
     padding: .5rem;
     font-size: 2.5rem;
-    color: var(--primary--dark2-color);
+    color: var(--primary--light2-color);
     width: 20rem;
 }
 .nhac::after{
@@ -144,6 +144,7 @@ ul li{
     position: absolute;
     transition: all 300ms ease-in-out;
     text-align: center;
+    color: var(--primary--dark2-color);
 }
 .nhac:hover::after{
     content: '嗦嗦! 嗦嗦!';
@@ -159,6 +160,7 @@ ul li{
     width: 20rem;
     text-align: center;
     transition: all 300ms ease-in-out;
+    color: var(--primary--dark2-color);
 }
 .salgados:hover::after{
     content: '咸菜';
@@ -176,7 +178,7 @@ ul li{
     width: 20rem;
     text-align: center;
     transition: all 300ms ease-in-out;
-    
+    color: var(--primary--dark2-color);
 }
 .doces:hover::after{
     content: '甜菜';
@@ -192,7 +194,7 @@ ul li{
     width: 20rem;
     text-align: center;
     transition: all 300ms ease-in-out;
-    
+    color: var(--primary--dark2-color);
 }
 .enviar:hover::after{
     content: '送菜';
@@ -679,7 +681,7 @@ body .full-width{
     }
 
     .nhac::after{
-        left: 45%;
+        margin-left: -72px;
         color: var(--primary--dark2-color);
     }
     .nhac:hover::after{
@@ -688,7 +690,7 @@ body .full-width{
         font-size: 2.5rem;
     }
     .salgados::after{
-        left: 42.3%;
+        margin-left: -108px;
         color: var(--primary--dark2-color);
     }
     .salgados:hover::after{
@@ -697,8 +699,7 @@ body .full-width{
         font-size: 2.5rem;
     }
     .doces::after{
-        top: 60%;
-        left: 42.3%;
+        margin-left: -104px;
         color: var(--primary--dark2-color);
     }
     .doces:hover::after{
@@ -708,8 +709,7 @@ body .full-width{
         
     }
     .enviar::after{
-        top: 65%;
-        left: 42.3%;
+        margin-left: -104px;
         color: var(--primary--dark2-color);
     }
     .enviar:hover::after{
